kubernetes/apps/network/envoy-gateway/app/security.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_securitypolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: envoy-cors
spec:
  cors:
    allowOrigins:
      - "https://*.witl.xyz"
    allowMethods:
      - GET
      - POST
      - PUT
      - PATCH
      - DELETE
      - OPTIONS
    allowHeaders:
      - "*"
    exposeHeaders:
      - Content-Length
      - Content-Type
      - X-Request-ID
    maxAge: 24h
    allowCredentials: true
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
